# mummy-maze-basic

./: README.md
MUMMY MAZE/: CMakeLists.txt  main.cpp  player.cpp  player.h
